常规更新：同步文件

--- a/_posts/2025-10-16-Pic.md
+++ b/_posts/2025-10-16-Pic.md
@@ -4,12 +4,33 @@ tags:
 title: pic
 ---
 ```
-![[bio-photo.jpg]]
+![bio-photo.jpg]
 ```
-![[bio-photo.jpg]]
+![bio-photo.jpg]
 
 ```
-![[assets/images/bio-photo.png]]
+![assets/images/bio-photo.png]
 ```
 
 ![[assets/images/bio-photo.png]]
+
+
+```
+![](assets/images/bio-photo.png)
+```
+
+![](assets/images/bio-photo.png)
+
+```
+![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png)
+```
+
+![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png)
+
+
+```
+![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png){: .align-right}
+```
+
+![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png{: .align-right}
+
