--- a/_posts/2025-10-16-Pic.md
+++ b/_posts/2025-10-16-Pic.md
@@ -22,6 +22,12 @@ title: pic
 ![](assets/images/bio-photo.png)
 
 ```
+![](/assets/images/bio-photo.png)
+```
+
+![](/assets/images/bio-photo.png)
+
+```
 ![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png)
 ```
 
