常规更新：同步文件

--- a/_posts/2025-10-16-Pic.md
+++ b/_posts/2025-10-16-Pic.md
@@ -4,9 +4,10 @@ tags:
 title: pic
 ---
 ```
-![bio-photo.jpg]
+![[bio-photo.jpg]]
 ```
-![bio-photo.jpg]
+
+![[bio-photo.jpg]]
 
 ```
 ![assets/images/bio-photo.png]
@@ -14,6 +15,11 @@ title: pic
 
 ![[assets/images/bio-photo.png]]
 
+```
+![/assets/images/bio-photo.png]
+```
+
+![[/assets/images/bio-photo.png]]
 
 ```
 ![](assets/images/bio-photo.png)
@@ -33,4 +39,6 @@ title: pic
 ```
 
 ![]({{site.url}}{{site.baseurl}}/assets/images/bio-photo.png{: .align-right}
+
+
 
