--- a/_posts/2025-10-12-测试.md
+++ b/_posts/2025-10-12-测试.md
@@ -11,3 +11,167 @@ tags:
 
 
 ![](/assets/images/Pasted image 20250220100640.png)
+
+
+## 1. 问题设定
+
+设 \( X_1, X_2, \dots, X_n \) 是 **独立** 随机变量，且对每个 \( i \) 有 \( a_i \le X_i \le b_i \)。  
+记 \( S_n = \sum_{i=1}^n X_i \)，\( \mathbb{E}[S_n] = \sum_{i=1}^n \mathbb{E}[X_i] \)。  
+Hoeffding 不等式说：对任意 \( t > 0 \)，
+
+\[
+P(S_n - \mathbb{E}[S_n] \ge t) \le \exp\left( - \frac{2 t^2}{\sum_{i=1}^n (b_i - a_i)^2} \right).
+\]
+
+同理有：
+
+\[
+P(|S_n - \mathbb{E}[S_n]| \ge t) \le 2 \exp\left( - \frac{2 t^2}{\sum_{i=1}^n (b_i - a_i)^2} \right).
+\]
+
+---
+
+## 2. 证明思路
+
+1. 用 **Chernoff 界**：对 \( s > 0 \)，
+
+\[
+P(S_n - \mathbb{E}[S_n] \ge t) \le e^{-s t} \, \mathbb{E}\left[ e^{s (S_n - \mathbb{E}[S_n])} \right].
+\]
+
+2. 因为独立，
+
+\[
+\mathbb{E}\left[ e^{s (S_n - \mathbb{E}[S_n])} \right] = \prod_{i=1}^n \mathbb{E}\left[ e^{s (X_i - \mathbb{E}[X_i])} \right].
+\]
+
+3. 对每个 \( X_i \) 在区间 \([a_i, b_i]\) 上，Hoeffding 引理给出：
+
+\[
+\mathbb{E}\left[ e^{s (X_i - \mathbb{E}[X_i])} \right] \le \exp\left( \frac{s^2 (b_i - a_i)^2}{8} \right).
+\]
+
+4. 代回 Chernoff 界，优化 \( s \) 得到结果。
+
+---
+
+## 3. Hoeffding 引理的证明
+
+**引理**：若 \( \mathbb{E}[X] = 0 \) 且 \( a \le X \le b \)，则对任意 \( s \in \mathbb{R} \)，
+
+\[
+\mathbb{E}[e^{sX}] \le \exp\left( \frac{s^2 (b-a)^2}{8} \right).
+\]
+
+---
+
+### 证明 Hoeffding 引理
+
+因为 \( e^{sx} \) 是凸函数，对于 \( x \in [a,b] \)，可以表示为 \( a \) 和 \( b \) 的凸组合：
+
+设 \( x = (1-\lambda) a + \lambda b \)，其中 \( \lambda = \frac{x-a}{b-a} \in [0,1] \)。
+
+由凸性：
+
+\[
+e^{sx} \le (1-\lambda) e^{sa} + \lambda e^{sb}.
+\]
+
+代入 \( \lambda \)：
+
+\[
+e^{sx} \le \frac{b-x}{b-a} e^{sa} + \frac{x-a}{b-a} e^{sb}.
+\]
+
+取期望，且 \( \mathbb{E}[X] = 0 \)（即 \( \mathbb{E}[X] = (1-\lambda_0) a + \lambda_0 b = 0 \) 可推出 \( \lambda_0 = \frac{-a}{b-a} \) 吗？我们直接一般性做）：
+
+记 \( p = \frac{-a}{b-a} \) ？ 其实更简单：设 \( \mathbb{E}[X] = 0 \)，则 \( \mathbb{E}[\lambda] = \mathbb{E}\left[ \frac{X-a}{b-a} \right] = \frac{-a}{b-a} \)，记这个为 \( \theta \)。
+
+于是：
+
+\[
+\mathbb{E}[e^{sX}] \le \mathbb{E}\left[ \frac{b-X}{b-a} e^{sa} + \frac{X-a}{b-a} e^{sb} \right].
+\]
+
+右边是 \( \frac{b - \mathbb{E}[X]}{b-a} e^{sa} + \frac{\mathbb{E}[X] - a}{b-a} e^{sb} \)，但 \( \mathbb{E}[X] = 0 \)，所以：
+
+\[
+= \frac{b}{b-a} e^{sa} + \frac{-a}{b-a} e^{sb}.
+\]
+
+记 \( h = s(b-a) \)，\( p = \frac{-a}{b-a} \in (0,1) \)（因为 \( a \le 0 \le b \) 吗？不一定，但可通过平移使均值为0，且不失一般性可设 \( a \le 0 \le b \)，因为加减常数不影响矩母函数界，只要区间长度不变）。
+
+实际上更一般地，令 \( L = b-a > 0 \)，设 \( a \le X \le b \)，\( \mathbb{E}[X] = 0 \)，则 \( a \le 0 \le b \)，且 \( |a|, |b| \le L \) 不对，但 \( b-a = L \)，且 \( -a \ge 0, b \ge 0 \) 不一定。不过 Hoeffding 原文直接做：
+
+记 \( \phi(s) = \log \mathbb{E}[e^{sX}] \)，我们要证 \( \phi(s) \le \frac{s^2 (b-a)^2}{8} \)。
+
+由 \( e^{sx} \) 凸性，我们得到：
+
+\[
+\mathbb{E}[e^{sX}] \le \frac{b}{b-a} e^{sa} - \frac{a}{b-a} e^{sb}.
+\]
+
+记右边为 \( e^{g(s)} \)，其中 \( g(s) = \log\left( \frac{b}{b-a} e^{sa} - \frac{a}{b-a} e^{sb} \right) \)。
+
+经过代数变形（Hoeffding 1963 原文），可写成：
+
+\[
+g(s) = \log\left( e^{sa} \left[ \frac{b}{b-a} - \frac{a}{b-a} e^{s(b-a)} \right] \right) = sa + \log\left( 1 - p + p e^{sL} \right) - \log(1-p)
+\]
+其中 \( p = -a / (b-a) \)，\( L = b-a \)。
+
+然后 \( g(0) = 0 \)，\( g'(0) = a + \frac{p L}{1-p + p e^{0}} = a + pL = a + (-a) = 0 \)，符合。
+
+计算 \( g''(s) \) 并证明 \( g''(s) \le \frac{L^2}{4} \)，于是由 \( g(0)=0, g'(0)=0 \) 得 \( g(s) \le \frac{s^2 L^2}{8} \)。
+
+事实上，已知一个标准结论：对于随机变量 \( Y \) 取值 \( 0 \) 和 \( L \) 两点，\( \mathbb{E}[Y] = pL \)，则 \( \log \mathbb{E}[e^{s(Y-pL)}] \le \frac{s^2 L^2}{8} \)。这里 \( X \) 可写成 \( Y-pL \) 形式，其中 \( Y \) 在 \( 0,L \) 取值，概率 \( 1-p, p \)。
+
+所以 Hoeffding 引理得证。
+
+---
+
+## 4. 回到主证明
+
+由 Chernoff 界：
+
+\[
+P(S_n - \mathbb{E}[S_n] \ge t) \le e^{-s t} \prod_{i=1}^n \mathbb{E}[e^{s(X_i - \mathbb{E}[X_i])}].
+\]
+
+对每个 \( i \)，应用引理于 \( X_i - \mathbb{E}[X_i] \in [a_i - \mathbb{E}[X_i], b_i - \mathbb{E}[X_i]] \)，区间长度仍是 \( b_i - a_i \)，所以：
+
+\[
+\mathbb{E}[e^{s(X_i - \mathbb{E}[X_i])}] \le \exp\left( \frac{s^2 (b_i - a_i)^2}{8} \right).
+\]
+
+于是：
+
+\[
+P(S_n - \mathbb{E}[S_n] \ge t) \le \exp\left( -s t + \frac{s^2}{8} \sum_{i=1}^n (b_i - a_i)^2 \right).
+\]
+
+对 \( s > 0 \) 最小化右边指数：关于 \( s \) 的二次函数 \( -t s + \frac{s^2}{8} V \)，其中 \( V = \sum (b_i-a_i)^2 \)。
+
+顶点在 \( s = \frac{4t}{V} \)，代入得：
+
+\[
+P(\cdots) \le \exp\left( -\frac{4t^2}{2V} \right) = \exp\left( -\frac{2t^2}{V} \right).
+\]
+
+即：
+
+\[
+P(S_n - \mathbb{E}[S_n] \ge t) \le \exp\left( - \frac{2 t^2}{\sum_{i=1}^n (b_i - a_i)^2} \right).
+\]
+
+同理可得 \( P(\mathbb{E}[S_n] - S_n \ge t) \) 相同界，联合得双侧不等式。
+
+---
+
+## 5. 最终结果
+
+\[
+P(|S_n - \mathbb{E}[S_n]| \ge t) \le 2 \exp\left( - \frac{2 t^2}{\sum_{i=1}^n (b_i - a_i)^2} \right).
+\]
+
+**证毕**。
