常规更新：同步文件

--- a/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
+++ b/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
@@ -598,7 +598,7 @@ const list = ref([
 - 根据 `list` 数组中的每一项数据，生成一个任务项。
 - 如果 `item.isCompleted` 为 `true`，则任务项会被标记为完成状态。
 
-![[Pasted image 20250227130955.png|450]]
+![](/assets/images/Pasted image 20250227130955.png)
 
 ---
 
@@ -755,7 +755,7 @@ const props = defineProps(['text']);
 ```
 
 效果如下。
-![[Pasted image 20250227151842.png|84]]
+![](/assets/images/Pasted image 20250227151842.png)
 
 #### 子传父 || `子defineEmits(["arg"]), 父@arg=func`
 
@@ -793,10 +793,10 @@ function PrintTest(str){
 </template>
 ```
 
-![[Pasted image 20250227160018.png|650]]
+![](/assets/images/Pasted image 20250227160018.png)
 
 效果：
-![[Pasted image 20250227160122.png|200]]
+![](/assets/images/Pasted image 20250227160122.png)
 
 
 
@@ -821,7 +821,7 @@ url:"https://q6zv39.laf.run/get_list"
 ```
 打开这个 url，可以看到其中的内容：
 
-![[Pasted image 20250227191011.png|275]]
+![](/assets/images/Pasted image 20250227191011.png)
 
 这就是后端给我们发过来的数据，（现在）作为前端，我们要对其进行处理，比如就用这个数据，来替换我们的 todo-list 吧！
 
