--- a/_posts/2025-05-30-Gauss积分.md
+++ b/_posts/2025-05-30-Gauss积分.md
@@ -19,11 +19,11 @@ $$
 
 
 **Eg.**
-![[Pasted image 20250321104008.png|275]]
+![](/assets/images/Pasted image 20250321104008.png)
 
 **解：**
-![[Pasted image 20250321104023.png|500]]
-![[Pasted image 20250321104050.png|500]]
+![](/assets/images/Pasted image 20250321104023.png)
+![](/assets/images/Pasted image 20250321104050.png)
 
 
 
