--- a/_posts/2025-05-30-换函数法.md
+++ b/_posts/2025-05-30-换函数法.md
@@ -5,7 +5,7 @@ tags:
   - 专业课
 ---
 
-![[Pasted image 20250328110546.png|500]]
+![](/assets/images/Pasted image 20250328110546.png)
 ### 证明伽马分布 $X \sim \Gamma(\alpha, \lambda)$ 的期望 $E(X) = \frac{\alpha}{\lambda}$  
 **方法**：利用积分求导法（生成函数思想）  
 
