--- a/_posts/2025-05-30-雅可比行列式与换元法.md
+++ b/_posts/2025-05-30-雅可比行列式与换元法.md
@@ -20,33 +20,33 @@ source: kimi
 
 ### 应用步骤
 
-![[Pasted image 20250321113207.png|600]]
+![](/assets/images/Pasted image 20250321113207.png)
 
 ### 示例
 
 ==例 1==
-![[Pasted image 20250321113225.png|450]]
+![](/assets/images/Pasted image 20250321113225.png)
 
 
 ==例 2==
 把这个算出来
-![[Pasted image 20250321113349.png|300]]
+![](/assets/images/Pasted image 20250321113349.png)
 
 其中卡方分布：
-![[Pasted image 20250321113452.png|300]]
+![](/assets/images/Pasted image 20250321113452.png)
 
 
 解：**（动笔！）**
 
-![[Pasted image 20250321113550.png|600]]
+![](/assets/images/Pasted image 20250321113550.png)
 
-![[Pasted image 20250321113612.png|600]]
-![[Pasted image 20250321113631.png|525]]
+![](/assets/images/Pasted image 20250321113612.png)
+![](/assets/images/Pasted image 20250321113631.png)
 
 
 
 ==例 3==
-![[Pasted image 20250321120141.png|400]]
+![](/assets/images/Pasted image 20250321120141.png)
 
 
 通过这种方式，雅可比行列式帮助我们正确地调整概率密度函数，以反映变换后随机变量的分布。
