--- a/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
+++ b/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
@@ -3,13 +3,13 @@ tags:
   - 计算机
   - 教程
   - AI
-  - 重要文献
 source: https://www.bilibili.com/video/BV1FPCzYdEeH
 title: 全栈开发笔记
+toc: "true"
 ---
->[!info] 说明
->本文写于2025年春，但是具体是什么时候，忘了。故暂定时间为3月10日。
 
+>说明
+>本文写于2025年春，但是具体是什么时候，忘了。故暂定时间为3月10日。
 
 > [!info]+ 本篇笔记的完成方式
 > 本笔记（将会）由 kimi，或者 deepseek，或者 chatgpt，或者 grok 赞助记出！
@@ -34,6 +34,7 @@ title: 全栈开发笔记
 >  程序：
 >  
 >  笔记样例：
+>
 > >[!example]
 > >### 事件监听 ||  `@[movement]=[function name]`
 > >事件监听的作用是：当用户对页面上的某个东西（比如按钮）做了某个动作（比如点击）时，就会自动执行一段代码（比如一个函数）。简单来说，就是“用户做了什么动作，页面就做出什么反应”。
@@ -53,11 +54,7 @@ title: 全栈开发笔记
 >
 >以上样例中，用到目录（并非本目录）中的“事件监听”和 key words list（并非本 list） 中的@click，@mouseenter，@mouseleave。样例的特点是：语言简洁直白、举一反三能力强、注释清晰实用、结构循序渐进、注重实用体现。
 
-
-
-
 # *HTML+CSS*
-
 
 > [!info] powered by Kimi
 
@@ -160,7 +157,6 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
 
 这表示背景颜色从左到右从 `rgb(113, 65, 168)` 渐变到 `rgba(44, 114, 251, 1)`。
 
-
 #### 边框（border）和圆角（border-radius）
 
 **边框**`border` 是一个复合属性，用于设置元素的边框样式，包括边框的宽度、样式和颜色。它可以通过简写形式一次性设置这三个属性，也可以分开单独设置。
@@ -181,7 +177,6 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
 - **4 个值**：分别对应左上角、右上角、右下角和左下角的圆角半径。
   - 例如：`border-radius: 10px 20px 30px 40px;` 表示左上角的圆角半径为 10 像素，右上角为 20 像素，右下角为 30 像素，左下角为 40 像素。
 
-
 这种设置通常用于创建类似按钮的样式，使按钮的一侧是直角，另一侧是圆角，增强视觉效果。
 
 ---
@@ -194,6 +189,7 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
   - 例如：`margin: 10px 20px 30px 40px;` 表示上边距为 10 像素，右边距为 20 像素，下边距为 30 像素，左边距为 40 像素。
 
 如果参数个数不同：
+
 - **`margin`** 是元素与其他元素之间的间距，用于控制元素之间的距离。参数个数不同，设置的范围也不同：
   - 1 个值：上下左右都相同。
   - 2 个值：上下相同，左右相同。
@@ -202,13 +198,13 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
 
 在 `.todo-app` 中，`margin-top` 设置为 `40px`，表示该元素顶部与其他元素的间距为 40像素。
 
-
 **内边距** `padding` 是元素内部的间距，用于控制元素内容与边框之间的距离。它与 `margin` 类似，也可以通过简写形式一次性设置上下左右四个方向的内边距，也可以单独设置。
 
 - **简写形式**：`padding: <上> <右> <下> <左>;`
   - 例如：`padding: 10px 20px 30px 40px;` 表示上内边距为 10 像素，右内边距为 20 像素，下内边距为 30 像素，左内边距为 40 像素。
 
 如果参数个数不同：
+
 - **1 个值**：所有方向的内边距相同。
   - 例如：`padding: 10px;` 表示上下左右的内边距都是 10 像素。
 
@@ -219,7 +215,6 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
   - 例如：`padding: 10px 20px 30px;` 表示上内边距为 10 像素，左右内边距为 20 像素，下内边距为 30 像素。
 
 在 `.todo-app` 中，`padding-top` 设置为 `30px`，表示该元素内容与顶部边框之间的距离为 30像素。
-
 
 #### 字体颜色（color）和字体大小（font-size）
 
@@ -300,9 +295,7 @@ background: linear-gradient(to right, rgb(113, 65, 168), rgba(44, 114, 251, 1));
 
 总结：本章主要介绍了 HTML 和 CSS 的基础知识，包括盒子（div）的使用、样式设置（如宽度、高度、背景颜色、圆角等），以及如何通过 CSS 实现盒子的排列和布局。同时，还涉及了如何创建图片和输入框，并为它们设置样式。
 
-
 # *JavaScript*
-
 
 > [!info] powered by ChatGPT
 
@@ -423,11 +416,9 @@ JavaScript 代码通常写在 `<script>` 标签内，放在 HTML 文档中。它
 </html>
 ```
 
-
 # *Vue*
 
 > [!info] powered by Kimi
-
 
 > [!summary]- 提示词填充
 > 章节：Vue
@@ -462,24 +453,33 @@ JavaScript 代码通常写在 `<script>` 标签内，放在 HTML 文档中。它
 ### 安装
 
 首先下载、安装 nvm
+
 然后在命令行中：
+
 ```bash
 nvm install 20
 nvm ls
 ```
+
 列出最新环境，假如说是 `20.13.1`，则输入：
+
 ```bash
 nvm use 20.13.1
 ```
+
 检测是否安装成功：
+
 ```bash
 node -v
 npm -v
 ```
+
 输出版本号即为安装成功。
 
 ### 定义变量 || `const value = ref('');`
+
 使用 以下操作来定义变量。
+
 ``` javascript
 const hello_str = ref('hello world')
 const number_100 = ref(100)
@@ -496,15 +496,18 @@ const list = ref([
 事件监听的作用是：当用户对页面上的某个东西（比如按钮）做了某个动作（比如点击）时，就会自动执行一段代码（比如一个函数）。简单来说，就是“用户做了什么动作，页面就做出什么反应”。
 在 Vue.js 中，事件监听是通过在标签上加一个 `@` 符号来实现的。
 具体样例如下：
+
 ```vue
 <div @click="add" class="button">Click me to call function add.</div>
 ```
+
 *注：上面的 `button` 是我们假想出来的一个类，假设这个 `button` 类已经在 `<style>` 里面写好了，它就是一个按钮样式。*
 **运行效果：**
 当用户点击这个按钮时，页面就会调用 `add` 函数。
 如果 `add` 函数的作用是增加一个数字，那么每次点击按钮，数字就会增加。
 
 除了点击事件`@click`，还有其他事件可以用来监听用户的操作：
+
 - **`@mouseenter`**：当鼠标移入按钮时触发。
 - **`@mouseleave`**：当鼠标移出按钮时触发。
 
@@ -525,6 +528,7 @@ const list = ref([
 注：`imageUrl` 是一个变量，它的值可以是图片的路径。
 
 运行效果：
+
 - 如果 `imageUrl` 的值是 `"https://example.com/image1.jpg"`，那么页面上就会显示这张图片。
 - 如果变量的值变了，图片也会跟着变。
 
@@ -537,6 +541,7 @@ const list = ref([
 注：`isCompleted` 是一个布尔值变量，`completed` 和 `item` 是两个不同的样式类。
 
 运行效果：
+
 - 如果 `isCompleted` 是 `true`，这个 `div` 的类名就会是 `completed`，页面上的样式会根据 `completed` 类的样式显示。
 - 如果是 `false`，就会应用 `item` 类的样式。
 
@@ -555,6 +560,7 @@ const list = ref([
 注：`todoValue` 是一个变量。
 
 运行效果：
+
 - 当用户在输入框中输入内容时，`todoValue` 的值会自动更新为输入的内容。
 - 如果代码中修改了 `todoValue` 的值，输入框的内容也会自动更新。
 
@@ -575,12 +581,11 @@ const list = ref([
 注：`list` 是一个数组，`item` 是数组中的每个对象，`index` 是对象的索引。
 
 运行效果：
+
 - 如果 `list` 的值是 `[{"value": "吃饭"}, {"value": "睡觉"}]`，页面上就会显示两个 `div`，分别包含“吃饭”和“睡觉”。
 - 如果数组的值变了，页面上的内容也会跟着变。
 
-
 在 Vue.js 中，列表渲染是通过 `v-for` 实现的。例如：
-
 
 ```html
 <div v-for="(item, index) in list" :class="[item.isCompleted ? 'completed' : 'item']">
@@ -591,7 +596,6 @@ const list = ref([
   <div @click="del(index)" class="del">del</div>
 </div>
 ```
-
 
 **运行效果：**
 
@@ -616,6 +620,7 @@ const list = ref([
 注：`isVisible` 和 `isHidden` 是布尔值变量。
 
 运行效果：
+
 - 如果 `isVisible` 是 `true`，第一个 `div` 会显示；如果是 `false`，则不会显示。
 - `v-show` 和 `v-if` 的区别是：`v-show` 只是控制元素的显示和隐藏，而 `v-if` 是直接决定是否渲染元素。
 
@@ -674,7 +679,6 @@ watch(obj, logChanges, { deep: true });
 运行效果：  
 如果 `obj` 的某个属性（比如 `name` 或 `age`）发生变化，`logChanges` 函数会被调用。
 
-
 ---
 
 ### 组件的注册和使用
@@ -688,6 +692,7 @@ import myButton from './components/button.vue';
 ```
 
 这时，`button.vue` 中的内容是：
+
 ```vue
 <!-- button.vue -->
 <script setup>
@@ -723,6 +728,7 @@ const props = defineProps(['text'])
 注：`myButton` 是一个组件，`text` 是传递给组件的属性。即使 `button.vue` 中的组件名字叫 `button`，也不影响父组件给它重命名。
 
 运行效果：
+
 - 页面上会显示一个按钮，按钮的内容是“Click me”。
 
 ---
@@ -745,21 +751,26 @@ const props = defineProps(['text'])
 
 **子组件：**
 在 `scripts` 中：
+
 ```javascript
 import { defineProps, defineEmits } from 'vue';
 const props = defineProps(['text']);
 ```
+
 在 `template` 中：
+
 ```html
 <div class="button">{{props.text}}</div>
 ```
 
 效果如下。
+
 ![](/assets/images/Pasted image 20250227151842.png)
 
 #### 子传父 || `子defineEmits(["arg"]), 父@arg=func`
 
 子组件：
+
 ```vue
 <script setup>
 import { defineProps, defineEmits, ref } from 'vue';
@@ -780,6 +791,7 @@ function send(){
 ```
 
 父组件：
+
 ```vue
 <script setup>
 import myButton from './components/button.vue'
@@ -796,20 +808,23 @@ function PrintTest(str){
 ![](/assets/images/Pasted image 20250227160018.png)
 
 效果：
+
 ![](/assets/images/Pasted image 20250227160122.png)
-
-
 
 # *Axios*
 
 Axios 是一个**从前端向后端发送（POST），或请求（GET）** 内容的桥梁。
+
 提一嘴，前面我们学习的 HTML, CSS, JavaScript, Vue, 都是前端开发的工具。
 
 安装
+
 ```bash
 npm install axios
 ```
+
 调用
+
 ```javascript
 import axios from 'axios'
 ```
@@ -819,6 +834,7 @@ import axios from 'axios'
 ```
 url:"https://q6zv39.laf.run/get_list"
 ```
+
 打开这个 url，可以看到其中的内容：
 
 ![](/assets/images/Pasted image 20250227191011.png)
@@ -847,10 +863,10 @@ async function getList(){
 
 ```
 
-
 `async` 是 JavaScript 中的一个关键字，用于声明一个函数是异步的。异步函数的主要特点是它允许在函数内部使用 `await` 关键字，从而暂停函数的执行，直到某个异步操作完成。*这使得异步代码的逻辑看起来像同步代码，更易于理解和维护。*
 
 - **语法**：
+
   ```javascript
   async function functionName() {
       // 函数体
@@ -885,11 +901,12 @@ async function del(id){
   getList()
 }
 ```
+
 其中，`data` 字段传的是前端向后端的返回值。
 
 # *Mongo*
-> [!info] powered by kimi
 
+> [!info] powered by kimi
 
 > [!summary]- 提示词填充
 > 章节：Node + Mongo 
@@ -910,13 +927,14 @@ async function del(id){
 > 发布、接口调试方法
 > \*我往里掺了点别的
 
-
 嗨嗨，这里是永雏塔菲喵～今天咱们来搞学习，主题是 Node + Mongo，听起来是不是有点复杂？别怕，跟着塔菲一起，咱们慢慢来，保证让你轻松掌握喵～准备好了吗？那咱们开始咯～
+
 ### 数据库调用方法
 
 **函数（代码）与集合（数据库）**  
 在 Node + Mongo 里，函数是用来操作数据库集合的工具喵。就像我们用一个神奇的小铲子去挖宝（数据库里的数据）一样，函数就是那个小铲子，而集合就是装宝物的大箱子（数据库里的数据集合）。  
 **Example**  
+
 ```javascript
 import cloud from '@lafjs/cloud';
 
@@ -924,22 +942,27 @@ export default async function (ctx: FunctionContext) {
   // 这里可以写调用数据库的函数喵
 }
 ```
+
 上面这段代码就像是打开数据库大门的钥匙，虽然还没具体操作啥，但已经准备好要和数据库“交流”啦。
 
 **db**  
 `db` 就像是数据库的“管家”，它管理着各种集合（数据库里的表）。我们通过 `db` 来找到我们需要操作的集合喵。  
 **Example**  
+
 ```javascript
 const db = cloud.mongo.db;
 ```
+
 这行代码就是把数据库的“管家”请出来，方便我们后面找集合用喵。
 
 **db.collection**  
 `db.collection` 是用来指定我们要操作哪个集合（表）的，就像我们告诉管家“我要去哪个房间找东西”一样喵。  
 **Example**  
+
 ```javascript
 const collection = db.collection('collectionName');
 ```
+
 这里就是告诉管家“我要去叫 collectionName 的房间找东西”喵。
 
 **insertOne, findOne, updateOne, deleteOne 及它们的返回值**  
@@ -950,31 +973,34 @@ const collection = db.collection('collectionName');
 - `deleteOne`：从集合里删除一个符合条件的元素，就像把宝箱里的一个宝物拿走喵。  
 它们的返回值就像是操作后的“反馈”，告诉我们操作成功没成功，或者返回了什么结果喵。  
 **Example 1.  `insertOne`**  
+
 ```javascript
 const result = await collection.insertOne({ name: 'taffy', age: 18 });
 console.log(result); // 这里会输出插入操作的结果喵
 ```
+
 这段代码就是往集合里插入了一个叫 taffy 的宝物，然后看看操作结果喵。
 
 **Example 2. `updateOne`**
 前面提到过 `updateOne` 是用来更新集合里的元素的喵。就像我们发现宝箱里的宝物有点旧了，想给它换个新样子喵。  
+
 ```javascript
 const result = await collection.updateOne({ name: 'taffy' }, { $set: { age: 19 } });
 console.log(result); // 这里会输出更新操作的结果喵
 ```
-这段代码就是把叫 taffy 的宝物的年龄从 18 改成了 19 喵。
 
+这段代码就是把叫 taffy 的宝物的年龄从 18 改成了 19 喵。
 
 **await**  
 `await` 就像是让我们“等一等”的魔法，因为数据库操作可能需要一点时间，所以我们得等它完成才能继续后面的操作喵。  
 **Example**  
+
 ```javascript
 const result = await collection.findOne({ name: 'taffy' });
 console.log(result); // 这里会输出找到的宝物喵
 ```
+
 这里就是等 `findOne` 找到宝物后再继续喵。
-
-
 
 ### 数据检验
 
@@ -983,21 +1009,25 @@ console.log(result); // 这里会输出找到的宝物喵
 `typeof body !== 'object'
 这行代码是用来检查 `body` 是不是对象的，如果不是对象，那可能就不合法了喵。  
 **Example**  
+
 ```javascript
 if (typeof ctx.body !== 'object') {
   ctx.body = { error: 'Invalid data structure' };
   return;
 }
 ```
+
 这里就是检查 `ctx.body` 是不是对象，如果不是，就返回一个错误信息喵。
 
 **new ObjectId**  
 `new ObjectId` 是用来生成一个唯一的标识符的，就像给每个宝物贴上一个独一无二的标签喵。  
 **Example**  
+
 ```javascript
 const objectId = new ObjectId();
 console.log(objectId); // 这里会输出一个独一无二的标识符喵
 ```
+
 这段代码就是生成了一个独一无二的标签喵。
 
 ### sealos cloud 运行方法
@@ -1005,9 +1035,11 @@ console.log(objectId); // 这里会输出一个独一无二的标识符喵
 **cloud.mongo.db**  
 `cloud.mongo.db` 就是连接到数据库的“桥梁”，让我们能在 sealos cloud 上操作数据库喵。  
 **Example**  
+
 ```javascript
 const db = cloud.mongo.db;
 ```
+
 这行代码就是搭建好了连接数据库的桥梁喵。
 
 **ctx**  
@@ -1015,17 +1047,21 @@ const db = cloud.mongo.db;
 **ctx.body**  
 `ctx.body` 是用来传递具体的数据的，就像小信使手里拿着的信封，里面装着要传递的信息喵。  
 **Example**  
+
 ```javascript
 ctx.body = { message: 'Operation successful' };
 ```
+
 这行代码就是让小信使把“操作成功”的信息带给前端喵。
 
 **return 结构体 传给前端**  
 我们操作完数据库后，要把结果打包成一个结构体（对象），然后通过 `ctx.body` 传给前端喵。就像我们把宝物装进一个漂亮的盒子里，让小信使带给别人喵。  
 **Example**  
+
 ```javascript
 ctx.body = { result: 'Data updated', data: updatedData };
 ```
+
 这里就是把更新后的数据和结果信息打包好，让小信使带给前端喵。
 
 ### 发布、接口调试方法
