--- a/_posts/2025-05-30-Gauss积分.md
+++ b/_posts/2025-05-30-Gauss积分.md
@@ -7,6 +7,8 @@ tags:
 source: kimi
 ---
 
+高斯积分如下所示：
+
 $$
 \int^{+\infty}_{-\infty}e^{-x^2}dx=\sqrt{\pi}
 $$
@@ -25,8 +27,6 @@ $$
 **解：**
 ![](/assets/images/Pasted image 20250321104023.png)
 ![](/assets/images/Pasted image 20250321104050.png)
-
-
 
 $$
 \int^{\infty}_{0}re^{-\frac{r^2}{2}}dr=1
