--- a/_posts/2025-05-30-【笔记】信息学中的概率统计.md
+++ b/_posts/2025-05-30-【笔记】信息学中的概率统计.md
@@ -222,7 +222,9 @@ $E[XY]$其实是可以通过联合概率密度函数直接积分求得的
 
 ![](/assets/images/Pasted image 20250328115420.png)
 
-上面谈到了有一个式子 $$E(x)=\sum_{n=0}^{+\infty}P(X> n)$$这是离散的时候的期望计算公式，现在 $$E(1_A)=P(A)$$
+上面谈到了有一个式子 $$E(x)=\sum_{n=0}^{+\infty}P(X> n)$$
+
+这是离散的时候的期望计算公式，现在 $$E(1_A)=P(A)$$
 
  所以
 
@@ -330,35 +332,83 @@ $D(X+Y)=D(X)+D(Y)+2Cov(X,Y)$
 | 分布名称      | 概率密度函数 (PDF)                                                           | 特征函数 (CF)                                         | 矩生成函数 (MGF)                                   | MGF 存在条件                     |
 | --------- | ---------------------------------------------------------------------- | ------------------------------------------------- | --------------------------------------------- | ---------------------------- |
 
-| **正态分布**  | $$f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$$ | $$\phi(t) = e^{i\mu t - \frac{\sigma^2 t^2}{2}}$$ | $$M(t) = e^{\mu t + \frac{\sigma^2 t^2}{2}}$$ | $$\forall t \in \mathbb{R}$$
+| **正态分布**  | $$f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$$
+
+ | $$\phi(t) = e^{i\mu t - \frac{\sigma^2 t^2}{2}}$$
+
+ | $$M(t) = e^{\mu t + \frac{\sigma^2 t^2}{2}}$$
+
+ | $$\forall t \in \mathbb{R}$$
 
  |
 
-| **指数分布**  | $$f(x) = \lambda e^{-\lambda x} \ (x \geq 0)$$                         | $$\phi(t) = \frac{\lambda}{\lambda - it}$$        | $$M(t) = \frac{\lambda}{\lambda - t}$$        | $$t < \lambda$$
+| **指数分布**  | $$f(x) = \lambda e^{-\lambda x} \ (x \geq 0)$$
+
+                         | $$\phi(t) = \frac{\lambda}{\lambda - it}$$
+
+        | $$M(t) = \frac{\lambda}{\lambda - t}$$
+
+        | $$t < \lambda$$
 
               |
 
-| **泊松分布**  | $$P(X=k) = \frac{\lambda^k e^{-\lambda}}{k!}$$                         | $$\phi(t) = e^{\lambda (e^{it} - 1)}$$            | $$M(t) = e^{\lambda (e^{t} - 1)}$$            | $$\forall t \in \mathbb{R}$$
+| **泊松分布**  | $$P(X=k) = \frac{\lambda^k e^{-\lambda}}{k!}$$
+
+                         | $$\phi(t) = e^{\lambda (e^{it} - 1)}$$
+
+            | $$M(t) = e^{\lambda (e^{t} - 1)}$$
+
+            | $$\forall t \in \mathbb{R}$$
 
  |
 
-| **伽马分布**  | $$f(x) = \frac{x^{k-1}e^{-x/\theta}}{\theta^k \Gamma(k)}$$             | $$\phi(t) = (1 - i\theta t)^{-k}$$                | $$M(t) = (1 - \theta t)^{-k}$$                | $$t < \frac{1}{\theta}$$
+| **伽马分布**  | $$f(x) = \frac{x^{k-1}e^{-x/\theta}}{\theta^k \Gamma(k)}$$
+
+             | $$\phi(t) = (1 - i\theta t)^{-k}$$
+
+                | $$M(t) = (1 - \theta t)^{-k}$$
+
+                | $$t < \frac{1}{\theta}$$
 
      |
 
-| **卡方分布**  | $$f(x) = \frac{x^{\nu/2-1}e^{-x/2}}{2^{\nu/2}\Gamma(\nu/2)}$$          | $$\phi(t) = (1 - 2it)^{-\nu/2}$$                  | $$M(t) = (1 - 2t)^{-\nu/2}$$                  | $$t < \frac{1}{2}$$
+| **卡方分布**  | $$f(x) = \frac{x^{\nu/2-1}e^{-x/2}}{2^{\nu/2}\Gamma(\nu/2)}$$
+
+          | $$\phi(t) = (1 - 2it)^{-\nu/2}$$
+
+                  | $$M(t) = (1 - 2t)^{-\nu/2}$$
+
+                  | $$t < \frac{1}{2}$$
 
           |
 
-| **均匀分布**  | $$f(x) = \frac{1}{b-a} \ (a \leq x \leq b)$$                           | $$\phi(t) = \frac{e^{itb} - e^{ita}}{it(b - a)}$$ | $$M(t) = \frac{e^{tb} - e^{ta}}{t(b - a)}$$   | $$t \neq 0$$
+| **均匀分布**  | $$f(x) = \frac{1}{b-a} \ (a \leq x \leq b)$$
+
+                           | $$\phi(t) = \frac{e^{itb} - e^{ita}}{it(b - a)}$$
+
+ | $$M(t) = \frac{e^{tb} - e^{ta}}{t(b - a)}$$
+
+   | $$t \neq 0$$
 
                  |
 
-| **伯努利分布** | $$P(X=1) = p, \ P(X=0) = 1-p$$                                         | $$\phi(t) = 1 - p + p e^{it}$$                    | $$M(t) = 1 - p + p e^{t}$$                    | $$\forall t \in \mathbb{R}$$
+| **伯努利分布** | $$P(X=1) = p, \ P(X=0) = 1-p$$
+
+                                         | $$\phi(t) = 1 - p + p e^{it}$$
+
+                    | $$M(t) = 1 - p + p e^{t}$$
+
+                    | $$\forall t \in \mathbb{R}$$
 
  |
 
-| **二项分布**  | $$P(X=k) = \binom{n}{k} p^k (1-p)^{n-k}$$                              | $$\phi(t) = (1 - p + p e^{it})^n$$                | $$M(t) = (1 - p + p e^{t})^n$$                | $$\forall t \in \mathbb{R}$$
+| **二项分布**  | $$P(X=k) = \binom{n}{k} p^k (1-p)^{n-k}$$
+
+                              | $$\phi(t) = (1 - p + p e^{it})^n$$
+
+                | $$M(t) = (1 - p + p e^{t})^n$$
+
+                | $$\forall t \in \mathbb{R}$$
 
  |
 
@@ -377,9 +427,11 @@ $D(X+Y)=D(X)+D(Y)+2Cov(X,Y)$
 3. **特殊情形**：
 
    - 卡方分布是伽马分布的特例（$$k = \nu/2, \theta = 2$$
+
 ）
 
    - 伯努利分布是二项分布 $$n=1$$
+
  时的特例
 
 4. **应用场景**：
@@ -616,11 +668,15 @@ $$
 $$
 其中 $A_n$ 是这个东西
 $$
+
 A_n(\epsilon)=\{|X_n-X|\geq \epsilon \}
+
 $$
 那么是否可以有如下论断：
 $$
+
 因为 P(\cup^{\infty}_{k=1}A_k(\epsilon))\leq \cup^{\infty}_{k=1}P(A_k(\epsilon))\leq \sum^{\infty}_{k=1} P(A_k(\epsilon))
+
 $$
 且根据 B-C 引理可知，$\sum^{\infty}_{k=1} P(A_k(\epsilon))$ 有限时，等价于 $X_{n}几乎必然收敛于 X$，所以证明 $\sum^{\infty}_{k=1} P(A_k(\epsilon))$ 有限，就证明了 $\lim_{n\to\infty}P(\cup_{m=n}^{+\infty}A_m(\epsilon))=0$。
 这对吗？
@@ -645,7 +701,9 @@ $$
 $$\text{Exp}(\lambda)=\Gamma(1,\lambda)$$
 $$\chi^2(n)=\Gamma(\frac{n}{2},\frac{1}{2})$$
 $$
+
 \frac{\Gamma(a,b)}{c}=\Gamma(a,b \cdot c)
+
 $$
 
 
@@ -809,6 +867,7 @@ $$
 * **总偏差平方和 $S_T$ (Total Sum of Squares)**: 代表所有数据（24个灯管）的总差异有多大。
 
 $$
+
  S_T = \sum_{j=1}^{r} \sum_{i=1}^{n_j} (X_{ij} - \bar{X})^2
 
 $$
@@ -822,7 +881,9 @@ $$
 * **效应平方和 $S_A$ (Sum of Squares due to Factor A)**: 这就是我们说的 **组间差异**。
 
 $$
+
  S_A = \sum_{j=1}^{r} n_j (\bar{X}_{\cdot j} - \bar{X})^2
+
 $$
 
     * $\bar{X}_{\cdot j}$ 是第j组的**组内平均**寿命（比如A类灯管的平均寿命）。
@@ -834,7 +895,9 @@ $$
 * **误差平方和 $S_E$ (Sum of Squares of Error)**: 这就是我们说的 **组内差异**。
 
 $$
+
  S_E = \sum_{j=1}^{r} \sum_{i=1}^{n_j} (X_{ij} - \bar{X}_{\cdot j})^2
+
 $$
 
     * 这个公式计算的是“一个组内，每个数据点”与“该组的平均值”的差异。它衡量的是一个组内部的波动有多大。
@@ -844,7 +907,9 @@ $$
 你的课件证明了这个核心关系：
 
 $$
+
  S_T = S_A + S_E
+
 $$
 
 **翻译**: **总差异 = 组间差异 + 组内差异**。完美对应我们上面的逻辑！
@@ -864,7 +929,9 @@ $$
     于是，我们的F统计量就是：
 
 $$
+
 F = \frac{MS_A}{MS_E} = \frac{S_A / (r-1)}{S_E / (n-r)}
+
 $$
 
     你看，这不就是 **(处理过的组间差异) / (处理过的组内差异)** 吗！
