--- a/_posts/2025-05-30-【笔记】信息学中的概率统计.md
+++ b/_posts/2025-05-30-【笔记】信息学中的概率统计.md
@@ -321,125 +321,6 @@ $D(X+Y)=D(X)+D(Y)+2Cov(X,Y)$
 
 ![](/assets/images/Pasted image 20250411111227.png)
 
-### 经典分布的概率密度函数、特征函数与矩生成函数对照表
-
-![](/assets/images/Pasted image 20250414102158.png)
-
-![](/assets/images/Pasted image 20250414093913.png)
-
-重点关注正态分布和指数分布，还有泊松分布 **也就是前三个**
-
-| 分布名称      | 概率密度函数 (PDF)                                                           | 特征函数 (CF)                                         | 矩生成函数 (MGF)                                   | MGF 存在条件                     |
-| --------- | ---------------------------------------------------------------------- | ------------------------------------------------- | --------------------------------------------- | ---------------------------- |
-
-| **正态分布**  | $$f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$$
-
- | $$\phi(t) = e^{i\mu t - \frac{\sigma^2 t^2}{2}}$$
-
- | $$M(t) = e^{\mu t + \frac{\sigma^2 t^2}{2}}$$
-
- | $$\forall t \in \mathbb{R}$$
-
- |
-
-| **指数分布**  | $$f(x) = \lambda e^{-\lambda x} \ (x \geq 0)$$
-
-                         | $$\phi(t) = \frac{\lambda}{\lambda - it}$$
-
-        | $$M(t) = \frac{\lambda}{\lambda - t}$$
-
-        | $$t < \lambda$$
-
-              |
-
-| **泊松分布**  | $$P(X=k) = \frac{\lambda^k e^{-\lambda}}{k!}$$
-
-                         | $$\phi(t) = e^{\lambda (e^{it} - 1)}$$
-
-            | $$M(t) = e^{\lambda (e^{t} - 1)}$$
-
-            | $$\forall t \in \mathbb{R}$$
-
- |
-
-| **伽马分布**  | $$f(x) = \frac{x^{k-1}e^{-x/\theta}}{\theta^k \Gamma(k)}$$
-
-             | $$\phi(t) = (1 - i\theta t)^{-k}$$
-
-                | $$M(t) = (1 - \theta t)^{-k}$$
-
-                | $$t < \frac{1}{\theta}$$
-
-     |
-
-| **卡方分布**  | $$f(x) = \frac{x^{\nu/2-1}e^{-x/2}}{2^{\nu/2}\Gamma(\nu/2)}$$
-
-          | $$\phi(t) = (1 - 2it)^{-\nu/2}$$
-
-                  | $$M(t) = (1 - 2t)^{-\nu/2}$$
-
-                  | $$t < \frac{1}{2}$$
-
-          |
-
-| **均匀分布**  | $$f(x) = \frac{1}{b-a} \ (a \leq x \leq b)$$
-
-                           | $$\phi(t) = \frac{e^{itb} - e^{ita}}{it(b - a)}$$
-
- | $$M(t) = \frac{e^{tb} - e^{ta}}{t(b - a)}$$
-
-   | $$t \neq 0$$
-
-                 |
-
-| **伯努利分布** | $$P(X=1) = p, \ P(X=0) = 1-p$$
-
-                                         | $$\phi(t) = 1 - p + p e^{it}$$
-
-                    | $$M(t) = 1 - p + p e^{t}$$
-
-                    | $$\forall t \in \mathbb{R}$$
-
- |
-
-| **二项分布**  | $$P(X=k) = \binom{n}{k} p^k (1-p)^{n-k}$$
-
-                              | $$\phi(t) = (1 - p + p e^{it})^n$$
-
-                | $$M(t) = (1 - p + p e^{t})^n$$
-
-                | $$\forall t \in \mathbb{R}$$
-
- |
-
-### 重要说明
-
-1. **PDF 定义域**：
-   - 连续型分布：概率密度函数定义在支撑集上
-   - 离散型分布：概率质量函数定义在整数点集上
-
-2. **函数关系**：
-
-   - 当MGF存在时：$$\phi(t) = M(it)$$
-
-   - 特征函数总是存在，而 MGF 可能不存在
-
-3. **特殊情形**：
-
-   - 卡方分布是伽马分布的特例（$$k = \nu/2, \theta = 2$$
-
-）
-
-   - 伯努利分布是二项分布 $$n=1$$
-
- 时的特例
-
-4. **应用场景**：
-   - 特征函数：用于理论证明和特征分析
-   - MGF：用于计算矩和推导概率不等式
-
-
-
 ## 多元随机变量的数字特征（数字特征就是第四章上面那一坨）
 
 ![](/assets/images/Pasted image 20250411111545.png)
@@ -928,10 +809,7 @@ $$
 
     于是，我们的F统计量就是：
 
-$$
-
-F = \frac{MS_A}{MS_E} = \frac{S_A / (r-1)}{S_E / (n-r)}
-
+$$F = \frac{MS_A}{MS_E} = \frac{S_A / (r-1)}{S_E / (n-r)}
 $$
 
     你看，这不就是 **(处理过的组间差异) / (处理过的组内差异)** 吗！
@@ -993,6 +871,3 @@ $$
 * **结论**：如果F值很大，意味着组间差异远大于随机的组内差异，我们就认为这个因素是显著的。
 
 希望这个讲解能让你对ANOVA有一个清晰的框架。别怕那些公式，理解了“组间差异 vs 组内差异”这个核心故事，公式只是实现这个故事的工具而已。
-
-
-
