--- a/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
+++ b/_posts/2025-03-10-【笔记】全栈开发「笔记」.md
@@ -1,11 +1,11 @@
 ---
 tags:
   - 计算机
-  - 教程
   - AI
 source: https://www.bilibili.com/video/BV1FPCzYdEeH
-title: 全栈开发笔记
+title: 【笔记】全栈开发「笔记」
 toc: "true"
+categories: 笔记
 ---
 
 >说明
