--- a/_posts/2025-09-19-编译原理【AI讲解】.md
+++ b/_posts/2025-09-19-编译原理【AI讲解】.md
@@ -502,6 +502,8 @@ toc: "true"
 
 这一页通过几个问题，来检验你对正则表达式的掌握程度，这几个问题层层递进，很有意思。
 
+```markdown
+
 - **问题1：写一个正则表达式，表示所有能被5整除的十进制数。**
     
     - **答案：(0∣1∣…∣9)∗(0∣5)(0|1|…|9)*(0|5)**
@@ -524,6 +526,7 @@ toc: "true"
         
     - **讲解：** 这个问题非常难，它的答案看起来像天书。你不需要现在就理解这个表达式的每一部分，老师把它放在这里是为了告诉你：虽然正则表达式很强大，但对于某些复杂规则，写出来的表达式会变得极其复杂。这也引出了本节课的重点：我们有比“人肉手写”复杂正则表达式更好的方法来做词法分析，那就是**有限自动机**。这个复杂的例子其实就是一个有限自动机的等价表达。
         
+```
 
 #### **第5页：如何识别词法单元？**
 
@@ -535,7 +538,8 @@ toc: "true"
     
 
 而LEX工具的内部魔法就是下面这个流程，这也是本节课最重要的知识链条：  
-正则表达式→NFA→DFA→minDFA→词法分析器代码\text{正则表达式} \rightarrow \text{NFA} \rightarrow \text{DFA} \rightarrow \text{minDFA} \rightarrow \text{词法分析器代码}
+
+正则表达式→NFA→DFA→minDFA→词法分析器代码
 
 - **NFA/DFA** 就是“有限自动机”，后面会详细讲。简单说，它们就是状态转换图的数学形式。
     
